fix spacing of letters

--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@
 }
 
 .promo .maincode {
-	letter-spacing: 2ex;
+	letter-spacing: -1px;
 }
 
 .promo .subcode {
